--- a/src/components/EmptyDom/index.less
+++ b/src/components/EmptyDom/index.less
@@ -58,15 +58,15 @@
     justify-content: center;
 
     .text {
-        font-size: 12px;
-        width: 200px;
-        margin: 0 auto 20px;
+        font-size: 11px;
         text-align: center;
-        opacity: 0.4;
+        color: #545454;
+        line-height: 16px;
+        margin-bottom: 15px;
     }
 
     .button {
-        width: 200px;
+        width: 194px;
         height: 40px;
         background: linear-gradient(to right, #BB5DF8, #4FEAFF);
         text-align: center;
@@ -74,18 +74,18 @@
         cursor: pointer;
         margin: 0 auto;
         color: #fff;
-        font-size: 16px;
+        font-size: 13px;
     }
 
     .button1 {
-        width: 230px;
-        height: 30px;
+        width: 274px;
+        height: 40px;
         margin: 0 auto;
        
 
         >img {
-            width: 230px;
-            height: 30px;
+            width: 274px;
+            height: 40px;
         }
     }
 }
