--- a/src/pages/ToConnect/index.less
+++ b/src/pages/ToConnect/index.less
@@ -8,38 +8,83 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    .text{
+      color: #fff;
+      font-size: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 20px;
+      >img{
+        width: 124px;
+        height: 110px;
+      }
+    }
+    .jumpButton{
+      width: 306px;
+      height: 83px;
+      background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+      text-align: center;
+      cursor: pointer;
+      font-size: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      div{
+          font-size: 14px;
+      }
+    }
+    .back{
+      color: #fff;
+      font-size: 23px;
+      text-align: center;
+      margin-top: 25px;
+      cursor: pointer;
+    }
   }
-  .text{
-    color: #fff;
-    font-size: 32px;
+.mobile {
+    width: 100vw;
+    height: 100vh;
+    background: url(../../assets/img/common/Bg.png) no-repeat;
+    background-position: 50% center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
-    >img{
-      width: 124px;
-      height: 110px;
+    .text{
+      color: #fff;
+      font-size: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 20px;
+      >img{
+        width: 92px;
+        height: 82px;
+      }
     }
-  }
-  .jumpButton{
-    width: 306px;
-    height: 83px;
-    background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-    text-align: center;
-    cursor: pointer;
-    font-size: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    div{
-        font-size: 14px;
+    .jumpButton{
+      width: 306px;
+      height: 65px;
+      background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+      text-align: center;
+      cursor: pointer;
+      font-size: 14px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      div{
+          font-size: 14px;
+      }
     }
-  }
-  .back{
-    color: #fff;
-    font-size: 23px;
-    text-align: center;
-    margin-top: 25px;
-    cursor: pointer;
+    .back{
+      color: #fff;
+      font-size: 14px;
+      text-align: center;
+      margin-top: 25px;
+      cursor: pointer;
+    }
   }
