--- a/src/pages/Claim/index.less
+++ b/src/pages/Claim/index.less
@@ -216,10 +216,11 @@
   background-position: 50% center;
   background-repeat: no-repeat;
   background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 16px;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  overflow: scroll;
+  padding:30px 30px 80px;
   .commonSection {
     background: rgba(255, 255, 255, 0.8);
     width: 100%;
@@ -244,8 +245,9 @@
   
     .showText {
       color: #14002F;
-      height: 70px;
-      font-size: 20px;
+      height: 50px;
+      font-size: 17px;
+      font-weight: 600;
       border-bottom: 1px solid #14002F;
       display: flex;
       align-items: center;
@@ -256,48 +258,52 @@
   
     .showText1 {
       color: #14002F;
-      height: 70px;
+      height: fit-content;
       font-size: 30px;
       border-bottom: 1px solid #14002F;
       text-align: center;
       flex-direction: column;
+      padding-bottom: 8px;
   
       >span {
-        font-size: 16px;
+        font-size: 15px;
+        margin-bottom: 8px;
       }
   
-      margin-bottom: 50px;
+      margin-bottom: 30px;
     }
   
     .showText0 {
       color: #C52929;
-      height: 70px;
+      height: fit-content;
       font-size: 30px;
       border-bottom: 1px solid #14002F;
       text-align: center;
       flex-direction: column;
-  
+  padding-bottom: 8px;
       >span {
-        font-size: 16px;
+        font-size: 15px;
         color: #14002F;
+        margin-bottom: 8px;
       }
   
-      margin-bottom: 50px;
+      margin-bottom: 30px;
     }
   
     .showItem {
   
       .label {
-        font-size: 16px;
+        font-size: 12px;
         color: #14002F;
-        margin-bottom: 12px;
+        margin-bottom: 8px;
+        font-weight: 600;
       }
   
       .inner {
         width: 100%;
         border-radius: 8px;
         height: 36px;
-        background: rgba(20, 0, 47, 0.1);
+        background: #CEC8DD;
         display: flex;
         align-items: center;
         padding-left: 16px;
@@ -305,7 +311,7 @@
         font-size: 12px;
         border: none;
         outline: none;
-        margin-bottom: 12px;
+        margin-bottom: 20px;
 
         
       }
@@ -323,9 +329,9 @@
       }
     }
   .buttons{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    // display: flex;
+    // align-items: center;
+    // justify-content: space-between;
 
   }
     .claimButton {
@@ -343,17 +349,92 @@
     }
   
     .claimButtonDis {
-      width: 300px;
-      height: 54px;
+      width: 100%;
+      height: 40px;
       text-align: center;
-      line-height: 54px;
+      line-height: 40px;
       font-size: 16px;
       color: #fff;
       cursor: pointer;
       background: #A19FA9;
-      margin: 20px auto 0;
-      border-radius: 8px;
+      margin: 25px auto 0;
     }
+    .claimButtonDisBack {
+      width: 100%;
+      height: 40px;
+      text-align: center;
+      line-height: 40px;
+      font-size: 16px;
+      color: #fff;
+      cursor: pointer;
+      background: #646464;
+      margin: 10px auto 0;
+    }
+    .claimButton{
+      width: 100%;
+      height: 40px;
+      text-align: center;
+      line-height: 40px;
+      font-size: 16px;
+      color: #fff;
+      cursor: pointer;
+      background: #646464;
+      margin: 25px auto 0;
+    }
+  }
+  .walletDom{
+    position: relative;
+    width: 137px;
+    height: 30px;
+    background: url(../../assets/img/common/border.png);
+    background-size: 100% 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin: 50px auto 0;
+    cursor: pointer;
+    .text{
+      color: #fff;
+      font-size: 12px;
+    }
+    .close{
+      width: 9px;
+      height: 9px;
+      background: url(../../assets/img/common/close.png);
+      background-size: 100% 100%;
+    }
+    &:hover{
+      .dis{
+        opacity: 1;
+      }
+    }
+    .dis{
+      opacity: 0;
+      width: 160px;
+      height: 30px;
+      background: #5C3E8C;
+      color: #fff;
+      text-align: center;
+      align-items: center;
+      font-size: 12px;
+      position: absolute;
+      top: 33px;
+      left: 50%;
+      transform: translateX(-50%);
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     
+      span{
+        border-bottom: 1px solid #fff;
+        font-size: 12px;
+        display: inline-block;
+        margin: auto;
+      }
+
+    }
+
   }
 }
 
