--- a/src/pages/ToConnect/index.less
+++ b/src/pages/ToConnect/index.less
@@ -1,90 +1,165 @@
 .mainContent {
-    width: 100vw;
-    height: 100vh;
-    background: url(../../assets/img/common/Bg.png) no-repeat;
-    background-position: 50% center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  background: url(../../assets/img/common/Bg.png) no-repeat;
+  background-position: 50% center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .text {
+    color: #fff;
+    font-size: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
-    .text{
-      color: #fff;
-      font-size: 32px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 20px;
-      >img{
-        width: 124px;
-        height: 110px;
-      }
-    }
-    .jumpButton{
-      width: 306px;
-      height: 83px;
-      background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-      text-align: center;
-      cursor: pointer;
-      font-size: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      div{
-          font-size: 14px;
-      }
-    }
-    .back{
-      color: #fff;
-      font-size: 23px;
-      text-align: center;
-      margin-top: 25px;
-      cursor: pointer;
+    margin-bottom: 20px;
+
+    >img {
+      width: 124px;
+      height: 110px;
     }
   }
+
+  .jumpButton {
+    width: 306px;
+    height: 83px;
+    background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+    text-align: center;
+    cursor: pointer;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    div {
+      font-size: 14px;
+    }
+  }
+
+  .back {
+    color: #fff;
+    font-size: 23px;
+    text-align: center;
+    margin-top: 25px;
+    cursor: pointer;
+  }
+
+  .addDom {
+    text-align: center;
+    padding-top: 60px;
+
+    .jumpButtonCon {
+      display: flex;
+      margin: 20px 0;
+
+      img {
+        cursor: pointer;
+      }
+
+      .img1 {
+        width: 127px;
+        height: 41px;
+        margin-right: 20px;
+      }
+
+      .img2 {
+        width: 143px;
+        height: 41px;
+      }
+    }
+
+    .text1,
+    .text2 {
+      color: #fff;
+      font-size: 12px;
+      line-height: 17px;
+    }
+  }
+}
+
 .mobile {
-    width: 100vw;
-    height: 100vh;
-    background: url(../../assets/img/common/Bg.png) no-repeat;
-    background-position: 50% center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  background: url(../../assets/img/common/Bg.png) no-repeat;
+  background-position: 50% center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .text {
+    color: #fff;
+    font-size: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
-    .text{
-      color: #fff;
-      font-size: 32px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 20px;
-      >img{
-        width: 92px;
-        height: 82px;
-      }
-    }
-    .jumpButton{
-      width: 306px;
-      height: 65px;
-      background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-      text-align: center;
-      cursor: pointer;
-      font-size: 14px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      div{
-          font-size: 14px;
-      }
-    }
-    .back{
-      color: #fff;
-      font-size: 14px;
-      text-align: center;
-      margin-top: 25px;
-      cursor: pointer;
+    margin-bottom: 20px;
+
+    >img {
+      width: 92px;
+      height: 82px;
     }
   }
+
+  .jumpButton {
+    width: 306px;
+    height: 65px;
+    background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+    text-align: center;
+    cursor: pointer;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    div {
+      font-size: 14px;
+    }
+  }
+
+  .back {
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 25px;
+    cursor: pointer;
+  }
+  .addDom {
+    text-align: center;
+    padding-top: 60px;
+
+    .jumpButtonCon {
+      display: flex;
+      margin: 20px 0;
+align-items: center;
+justify-content: center;
+      img {
+        cursor: pointer;
+      }
+
+      .img1 {
+        width: 82px;
+        height: 27px;
+        margin-right: 20px;
+      }
+
+      .img2 {
+        width: 92px;
+        height: 27px;
+      }
+    }
+
+    .text1,
+    .text2 {
+      color: #fff;
+      font-size: 10px;
+      line-height: 17px;
+    }
+  }
+}
